test-suite/output/bug_19861.out
File "./output/bug_19861.v", line 8, characters 2-6:
Error:
The following section variable is used but not declared:
HypFalse.

You can either update your proof to not depend on HypFalse, or you can update your Proof line from
Proof using 
to
Proof using HypFalse


coqc exited with code 1
